--- a/main.css
+++ b/main.css
@@ -3,21 +3,53 @@ body {
 	padding:  50px;
 }
 
-div, li {border: 1px dashed green;}
-span {margin: 0 10px;}
-#container { width: 400px; margin:  0 auto;}
-#shoppingForm { width: 50%; margin: 0 auto;}
-li {
+
+#checkbox {margin-right: 10px; }
+span {margin: 0 10px; padding: 5px;}
+
+#container { 
+	width: 400px; margin:  0 auto; 
+}
+
+#shoppingForm { width: 400px; margin: 0 auto;}
+
+#formHeader {
+	background-color: #37cb43;
+}
+
+#wrapper {
+	width: 675px;
+	margin: 0 auto;
+}
+h1 {
+	color: white;
+	font-style: italic;
+	text-align: center;
+}
+#item {font-size: 20px;}
+}
+	
+#add #delete {
+	margin: 5px; 
+	padding: 10px; 
+	font-family: verdana; 
+	font-size: 25px;
+}
+
+p {
 	list-style: none;
 	margin: 5px 10px;
-	padding:2px;
-	padding-right:3px; 
-	width: 30px;
+	padding: 5px;
+	width: 85%;
+	font-family: verdana;
+	font-size: 14px;
+	font-weight: bold;
+	border-bottom: 1px dashed gray;
 }
-.strike { text-decoration: line-through;}
+#list {padding: 5px;}
+/*.strike { text-decoration: line-through;}*/
+#item {
+	margin: 20px;
+	padding:  5px;	
+}
 
-#add{
-	text-shadow: 0 0 2px #a49595;
-	margin-left: 10px;
-}
-.delete {}
